Heading Alignment Correction

--- a/Frontend-Projects/onlineclothshopping website/style.css
+++ b/Frontend-Projects/onlineclothshopping website/style.css
@@ -56,6 +56,7 @@ img{
 
 .heading-dark{
     color: var(--brown-color);
+    text-align: center;
 }
 
 .heading-light{
